Get PMD tool to work.
Signed-off-by: Tobias Lorenz <tobias.lorenz@etas.com>